Update mac and term configs

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -4,6 +4,7 @@ window:
   padding:
     x: 8
     y: 8
+  decorations: buttonless
 
 scrolling:
   history: 10000
@@ -21,7 +22,7 @@ font:
   bold_italic:
     family: SFMono Nerd Font
     style: Bold Italic
-  size: 10
+  size: 12
 
 colors:
   primary:
@@ -31,7 +32,8 @@ colors:
     cursor: '#6f7683'
     text: '#4a505d'
   normal:
-    black: '#242424'
+    black: '#6f7683'
+    #black: '#242424'
     red: '#e78287'
     green: '#a7cb8b'
     yellow: '#daaa78'
