Update linux configs

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -10,9 +10,11 @@ rounded-corners-exclude = [
   "class_g = 'XTerm'",
   "class_g = 'kitty'",
   "class_g = 'lattedock'",
+  "class_g = 'Xfce4-panel'",
   #"class_g = 'Alacritty'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
+  #"class_g = 'plank'",
   #"class_g = 'firefox'",
   #"class_g = 'Thunderbird'"
 ];
@@ -109,7 +111,7 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true;
+fading = false;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -230,24 +232,24 @@ opacity-rule = [
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ""
-blur-kern = "3x3box";
+#blur-kern = "3x3box";
 
 
-blur: {
+#blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "kawase";
+  #method = "kawase";
   #method = "kernel";
-  strength = 7;
+  #strength = 7;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
-  background = false;
-  background-frame = false;
-  background-fixed = false;
-  kern = "3x3box";
-}
+  #background = false;
+  #background-frame = false;
+  #background-fixed = false;
+  #kern = "3x3box";
+#}
 
 # Exclude conditions for background blur.
-blur-background-exclude = [
+#blur-background-exclude = [
   #"window_type = 'dock'",
   #"window_type = 'desktop'",
   #"class_g = 'URxvt'",
@@ -255,9 +257,9 @@ blur-background-exclude = [
   # prevents picom from blurring the background
   # when taking selection screenshot with `main`
   # https://github.com/naelstrof/maim/issues/130
-  "class_g = 'slop'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
+  #"class_g = 'slop'",
+  #"_GTK_FRAME_EXTENTS@:c"
+#];
 
 #################################
 #       General Settings        #
@@ -276,7 +278,7 @@ backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true;
+#vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
