--- a/.yabairc
+++ b/.yabairc
@@ -4,7 +4,6 @@
 yabai -m config mouse_follows_focus          on
 yabai -m config focus_follows_mouse          off
 yabai -m config window_placement             second_child
-yabai -m config window_topmost               off
 yabai -m config window_opacity               on
 yabai -m config window_shadow                off
 yabai -m config active_window_opacity        1.0
@@ -23,16 +22,18 @@ yabai -m config left_padding                 20
 yabai -m config right_padding                20
 yabai -m config window_gap                   20
 
-yabai -m config window_border                on
-yabai -m config window_border_width          2
-yabai -m config active_window_border_color   0xffd19a66
-yabai -m config normal_window_border_color   0xff505050
+#yabai -m config window_border                on
+#yabai -m config window_border_width          2
+#yabai -m config active_window_border_color   0xffd19a66
+#yabai -m config normal_window_border_color   0xff505050
 
 yabai -m space 1 --label email
 yabai -m rule --add app="Thunderbird" space=^"email"
 
 yabai -m space 2 --label messenger
-yabai -m rule --add app="Ferdi" space=^"messenger"
+yabai -m rule --add app="Ferdium" space=^"messenger"
+yabai -m rule --add app="Mattermost" space=^"messenger"
+yabai -m rule --add app="Teams" space=^"messenger"
 
 yabai -m space 3 --label web
 yabai -m rule --add app="Firefox" space=^"web"
@@ -41,24 +42,18 @@ yabai -m rule --add app="Google Chrome" space=^"web"
 yabai -m rule --add app="Safari" space=^"web"
 
 yabai -m space 4 --label code
-yabai -m rule --add app="Atom" space=^"code"
+yabai -m rule --add app="Pulsar" space=^"code"
 
 yabai -m space 8 --label vcs
-yabai -m config --space 8 window_border off
-yabai -m config --space 8 layout float
+#yabai -m config --space 8 window_border off
+#yabai -m config --space 8 layout float
 yabai -m rule --add app="Fork" space=^"vcs"
 
-yabai -m space 9 --label game
-yabai -m config --space 9 window_border off
-yabai -m config --space 9 layout float
-yabai -m rule --add app="Last Fortress" space="^game"
-
-yabai -m space 10 --label media
+yabai -m space 9 --label media
 yabai -m rule --add app="Plex" space=^"media"
 yabai -m rule --add app="PlexMobile" space=^"media"
 yabai -m rule --add app="VLC" space=^"media"
 yabai -m rule --add app="Spotify" space=^"media"
 
-
-echo "yabai configuration loaded.."
+borders active_color=0xffd19a66 inactive_color=0xff505050 width=2.0 &
 
